added styling and navigation

--- a/adventure/src/App.css
+++ b/adventure/src/App.css
@@ -1,42 +1,28 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navigation{
+  animation: navigation-animation 10s infinite;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: red;
 }
 
-.App-link {
-  color: #61dafb;
+.App{
+  padding: 60px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2 {
+  border-bottom: solid 1px lightgray;
 }
 
 .eventList{
   display: flex;
+  justify-content: space-around;
+}
+
+@keyframes navigation-animation{
+0%{
+  filter: hue-rotate(0deg)
+}
+100%{
+  filter: hue-rotate(360deg)
+}
 }
